--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,10 @@
 		</div>
 
 		<h4>Projects</h4>
-		{{#each projects}}
+		{{#if min}}
+			<button class="likeBtn">Like</button>
+		{{else}}
+			{{#each projects}}
 			<div class="project" id="{{id}}">
 				<div class="thumbnail">
 					<a href="/project/{{id}}">
@@ -31,11 +34,22 @@
 					<div class="details"></div>
 				</div>
 			</div>
-		{{/each}}
+			{{/each}}
+		{{/if}}
 
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/introHCI.js"></script>
-</body>
-</html>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/introHCI.js"></script>
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-92551011-1', 'auto');
+		ga('send', 'pageview');
+
+		</script>
+	</body>
+	</html>
